# talent-v2

./: .gitignore  pyproject.toml
backend/backend/: settings.py
frontend/: package-lock.json
