[tool.poetry]
name = "talent-v2"
version = "0.1.0"
description = ""
authors = ["chienchuanw <chienchuanwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
